--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -9,12 +9,13 @@ ENV DEBIAN_FRONTEND=noninteractive
 # Python wants UTF-8 locale
 ENV LANG=C.UTF-8
 
-# Tell pipenv where the shell is
+# Tell pipenv where the shell is. This allows us to use "pipenv shell" as a
+# container entry point.
 ENV PYENV_SHELL=/bin/bash
 
 ENV GOOGLE_APPLICATION_CREDENTIALS=secrets/llm-service-account.json
 
-# Tell Python to disable buffering
+# Tell Python to disable buffering so we don't lose any logs.
 ENV PYTHONUNBUFFERED=1
 
 # Ensure we have an up to date baseline, install dependencies and
@@ -31,10 +32,9 @@ RUN set -ex; \
     useradd -ms /bin/bash app -d /home/app -u 1000 -p "$(openssl passwd -1 Passw0rd)" && \
     mkdir -p /app && \
     mkdir -p /persistent && \
-    mkdir -p /app/coverage && \
-    chown -R app:app /persistent && \
-    chown -R app:app /app && \
-    chmod 777 /app/coverage
+    chown app:app /persistent && \
+    chown app:app /app
+
 
 # Switch to the new user
 USER app
@@ -43,10 +43,10 @@ WORKDIR /app
 # Install python packages
 COPY --chown=app:app src/Pipfile src/Pipfile.lock /app/
 
-# Install both default and development dependencies
-RUN pipenv install --dev
+RUN pipenv sync
 
-# Add the rest of the source code
+# Add the rest of the source code. This is done last so we don't invalidate all
+# layers when we change a line of code.
 COPY --chown=app:app . /app
 
 CMD ["/bin/bash"]
