--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,8 +9,12 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v2
 
-    - name: Set permissions for coverage directory
-      run: mkdir -p ${{ github.workspace }}/coverage && chmod -R 777 ${{ github.workspace }}/coverage
+    - name: Create coverage directories with proper permissions
+      run: |
+        mkdir -p ${{ github.workspace }}/coverage
+        mkdir -p ${{ github.workspace }}/src/.coverage
+        chmod -R 777 ${{ github.workspace }}/coverage
+        chmod -R 777 ${{ github.workspace }}/src/.coverage
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -36,9 +40,14 @@ jobs:
       run: |
         CONTAINER_NAME=$(docker-compose -f src/docker-compose.yml ps -q test-image)
         echo "Container ID: $CONTAINER_NAME"
-        docker exec $CONTAINER_NAME pipenv run pytest --cov=src \
-        --cov-report=xml:/app/coverage/coverage.xml \
-        --cov-report=html:/app/coverage/html
+        # Create coverage directory inside container
+        docker exec $CONTAINER_NAME mkdir -p /app/.coverage
+        docker exec $CONTAINER_NAME chmod 777 /app/.coverage
+        # Run tests with coverage
+        docker exec -e COVERAGE_FILE=/app/.coverage/.coverage $CONTAINER_NAME pipenv run pytest \
+          --cov=src \
+          --cov-report=xml:/app/coverage/coverage.xml \
+          --cov-report=html:/app/coverage/html
         
     - name: List container contents
       run: |
