--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,4 +1,3 @@
-# Use the official Debian-hosted Python image
 FROM python:3.11-slim-bookworm
 
 ARG DEBIAN_PACKAGES="build-essential git screen vim"
@@ -31,10 +30,13 @@ RUN set -ex; \
     pip install pipenv && \
     useradd -ms /bin/bash app -d /home/app -u 1000 -p "$(openssl passwd -1 Passw0rd)" && \
     mkdir -p /app && \
+    mkdir -p /app/.coverage && \
+    mkdir -p /app/coverage && \
     mkdir -p /persistent && \
-    chown app:app /persistent && \
-    chown app:app /app
-
+    chown -R app:app /persistent && \
+    chown -R app:app /app && \
+    chmod -R 777 /app/.coverage && \
+    chmod -R 777 /app/coverage
 
 # Switch to the new user
 USER app
