--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,17 +1,23 @@
+version: '3.8'
+
 networks:
     default:
         name: llm-rag-network
         external: true
+
 services:
     test-image:
         image: test-image
         container_name: test-image-container
         volumes:
             - ../src:/app
-            - ./coverage:/app/coverage:delegated
+            - ./coverage:/coverage
         depends_on:
             - chromadb
         command: ["tail", "-f", "/dev/null"]
+        environment:
+            - COVERAGE_FILE=/coverage/.coverage
+    
     chromadb:
         image: chromadb/chroma:0.5.5
         container_name: llm-rag-chromadb
@@ -22,4 +28,4 @@ services:
         environment:
             - IS_PERSISTENT=TRUE
             - ANONYMIZED_TELEMETRY=FALSE
-            - CHROMA_SERVER_CORS_ALLOW_ORIGINS=["*"] # This is not recommended for production environments.
+            - CHROMA_SERVER_CORS_ALLOW_ORIGINS=["*"]
