--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,10 +9,10 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v2
 
-    - name: Create coverage directories
+    - name: Create coverage directory
       run: |
         mkdir -p ${{ github.workspace }}/coverage
-        mkdir -p ${{ github.workspace }}/src/.coverage
+        chmod -R 777 ${{ github.workspace }}/coverage
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -38,25 +38,16 @@ jobs:
       run: |
         CONTAINER_NAME=$(docker-compose -f src/docker-compose.yml ps -q test-image)
         echo "Container ID: $CONTAINER_NAME"
-        docker exec -e COVERAGE_FILE=/app/.coverage/.coverage $CONTAINER_NAME pipenv run pytest \
+        docker exec $CONTAINER_NAME pipenv run pytest \
           --cov=src \
-          --cov-report=xml:/app/coverage/coverage.xml \
-          --cov-report=html:/app/coverage/html
-        
-    - name: List container contents
-      run: |
-        CONTAINER_NAME=$(docker-compose -f src/docker-compose.yml ps -q test-image)
-        echo "Listing /app/coverage in container..."
-        docker exec $CONTAINER_NAME ls -la /app/coverage
+          --cov-report=xml:/coverage/coverage.xml \
+          --cov-report=html:/coverage/html \
+          tests/
 
-    - name: Copy coverage reports from container
+    - name: Copy coverage reports
       run: |
         CONTAINER_NAME=$(docker-compose -f src/docker-compose.yml ps -q test-image)
-        echo "Container name: $CONTAINER_NAME"
-        echo "Copying coverage reports..."
-        docker cp $CONTAINER_NAME:/app/coverage/. ${{ github.workspace }}/coverage/
-        echo "Listing copied files..."
-        ls -la ${{ github.workspace }}/coverage
+        docker cp $CONTAINER_NAME:/coverage/. ${{ github.workspace }}/coverage/
 
     - name: Upload Coverage Report (XML)
       uses: actions/upload-artifact@v3
