--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,31 +1,36 @@
 version: '3.8'
 
 networks:
-    default:
-        name: llm-rag-network
-        external: true
+  default:
+    name: llm-rag-network
+    external: true
 
 services:
-    test-image:
-        image: test-image
-        container_name: test-image-container
-        volumes:
-            - ../src:/app
-            - ./coverage:/coverage
-        depends_on:
-            - chromadb
-        command: ["tail", "-f", "/dev/null"]
-        environment:
-            - COVERAGE_FILE=/coverage/.coverage
-    
-    chromadb:
-        image: chromadb/chroma:0.5.5
-        container_name: llm-rag-chromadb
-        ports:
-            - 8000:8000
-        volumes:
-            - ./docker-volumes/chromadb:/chroma/chroma
-        environment:
-            - IS_PERSISTENT=TRUE
-            - ANONYMIZED_TELEMETRY=FALSE
-            - CHROMA_SERVER_CORS_ALLOW_ORIGINS=["*"]
+  test-image:
+    image: test-image
+    container_name: test-image-container
+    volumes:
+      - ..:/app:ro  # Mount as read-only
+      - coverage-volume:/coverage
+    depends_on:
+      - chromadb
+    command: ["tail", "-f", "/dev/null"]
+    environment:
+      - COVERAGE_FILE=/coverage/.coverage
+      - PYTHONPATH=/app/src
+    user: "1000:1000"  # Match the UID:GID from Dockerfile
+  
+  chromadb:
+    image: chromadb/chroma:0.5.5
+    container_name: llm-rag-chromadb
+    ports:
+      - 8000:8000
+    volumes:
+      - ./docker-volumes/chromadb:/chroma/chroma
+    environment:
+      - IS_PERSISTENT=TRUE
+      - ANONYMIZED_TELEMETRY=FALSE
+      - CHROMA_SERVER_CORS_ALLOW_ORIGINS=["*"]
+
+volumes:
+  coverage-volume:
