--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,16 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v2
 
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.11'
+
+    - name: Install Pipenv
+      run: |
+        python -m pip install --upgrade pip
+        pip install pipenv
+
     - name: Create coverage directory
       run: |
         mkdir -p ${{ github.workspace }}/coverage
@@ -28,15 +38,14 @@ jobs:
     - name: Create external Docker network
       run: docker network create llm-rag-network || true
 
-    - name: Prepare Pipenv files
+    - name: Setup test environment
       run: |
         cd src
-        if [ ! -f "Pipfile" ]; then
-          cp Pipfile.template Pipfile
-        fi
-        if [ ! -f "Pipfile.lock" ]; then
-          pipenv lock
-        fi
+        # Ensure Pipfile exists and has correct permissions
+        touch Pipfile
+        chmod 666 Pipfile
+        pipenv install --dev
+        chmod -R 777 .
 
     - name: Build Docker image
       run: |
@@ -48,22 +57,22 @@ jobs:
         cd src
         docker-compose up -d
         docker ps
-        sleep 15  # Wait time for services to stabilize
+        sleep 15
 
     - name: Run tests with proper permissions
       run: |
         cd src
         CONTAINER_NAME=$(docker-compose ps -q test-image)
         echo "Container ID: $CONTAINER_NAME"
-        # Create directories and set permissions
-        docker exec $CONTAINER_NAME mkdir -p /app/src
-        docker exec $CONTAINER_NAME mkdir -p /coverage
-        docker exec $CONTAINER_NAME chmod -R 777 /coverage
+        
+        # Ensure proper permissions
+        docker exec $CONTAINER_NAME bash -c "mkdir -p /coverage && chmod -R 777 /coverage"
+        
         # Run tests
         docker exec \
           -e COVERAGE_FILE=/coverage/.coverage \
           $CONTAINER_NAME \
-          bash -c "cd /app && pipenv run pytest \
+          bash -c "cd /app && PYTHONPATH=/app pipenv run pytest \
           --cov=src \
           --cov-report=xml:/coverage/coverage.xml \
           --cov-report=html:/coverage/html \
@@ -78,21 +87,9 @@ jobs:
           echo "Error: Could not find test container"
           exit 1
         fi
-        mkdir -p ${{ github.workspace }}/coverage
-        docker exec $CONTAINER_NAME ls -la /coverage || true
-        docker cp $CONTAINER_NAME:/coverage/. ${{ github.workspace }}/coverage/ || true
+        docker exec $CONTAINER_NAME bash -c "ls -la /coverage"
+        docker cp $CONTAINER_NAME:/coverage/. ${{ github.workspace }}/coverage/
         sudo chown -R $USER:$USER ${{ github.workspace }}/coverage/
-
-    - name: Validate coverage reports
-      if: always()
-      run: |
-        ls -la ${{ github.workspace }}/coverage/
-        if [ ! -f "${{ github.workspace }}/coverage/coverage.xml" ]; then
-          echo "Warning: coverage.xml not found"
-        fi
-        if [ ! -d "${{ github.workspace }}/coverage/html" ]; then
-          echo "Warning: coverage HTML report not found"
-        fi
 
     - name: Upload Coverage Report (XML)
       if: always()
@@ -100,7 +97,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: coverage-report-xml
-        path: ${{ github.workspace }}/coverage/coverage.xml
+        path: coverage/coverage.xml
         if-no-files-found: warn
 
     - name: Upload Coverage Report (HTML)
@@ -109,7 +106,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: coverage-report-html
-        path: ${{ github.workspace }}/coverage/html
+        path: coverage/html
         if-no-files-found: warn
 
     - name: Cleanup
