--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,17 +39,21 @@ jobs:
       run: docker network create llm-rag-network || true
 
     - name: Setup test environment
-      run: |
-        cd src
-        # Ensure Pipfile exists and has correct permissions
-        touch Pipfile
-        chmod 666 Pipfile
-        pipenv install --dev
-        chmod -R 777 .
+          run: |
+            cd src
+            # Create and initialize Pipfile and Pipfile.lock
+            touch Pipfile
+            chmod 666 Pipfile
+            pipenv install --dev
+            # Generate Pipfile.lock
+            pipenv lock
+            chmod 666 Pipfile.lock
+            chmod -R 777 .
 
-    - name: Build Docker image
+- name: Build Docker image
       run: |
-        docker build -t test-image -f src/Dockerfile .
+        cd src  # Change to src directory first
+        docker build -t test-image .  # Build from current directory
         docker image ls
 
     - name: Run docker compose
