--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,22 +39,23 @@ jobs:
       run: docker network create llm-rag-network || true
 
     - name: Setup test environment
-          run: |
-            cd src
-            # Create and initialize Pipfile and Pipfile.lock
-            touch Pipfile
-            chmod 666 Pipfile
-            pipenv install --dev
-            # Generate Pipfile.lock
-            pipenv lock
-            chmod 666 Pipfile.lock
-            chmod -R 777 .
+      run: |
+        cd src
+        # Create and initialize Pipfile and Pipfile.lock
+        touch Pipfile
+        chmod 666 Pipfile
+        # Add necessary dependencies to Pipfile
+        pipenv install pytest pytest-cov chromadb langchain openai google-cloud-aiplatform --dev
+        # Generate Pipfile.lock
+        pipenv lock
+        chmod 666 Pipfile.lock
+        chmod -R 777 .
 
     - name: Build Docker image
-          run: |
-            cd src  # Change to src directory first
-            docker build -t test-image .  # Build from current directory
-            docker image ls
+      run: |
+        cd src
+        docker build -t test-image .
+        docker image ls
 
     - name: Run docker compose
       run: |
