--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,73 @@
-- name: Run tests with proper permissions
+name: Run Tests
+on:
+  push:
+    branches: [ milestone4 ]
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Check out code
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.11'
+
+    - name: Install Pipenv
+      run: |
+        python -m pip install --upgrade pip
+        pip install pipenv
+
+    - name: Create coverage directory
+      run: |
+        mkdir -p ${{ github.workspace }}/coverage
+        chmod -R 777 ${{ github.workspace }}/coverage
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Install Docker Compose
+      run: |
+        sudo curl -L "https://github.com/docker/compose/releases/download/v2.5.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
+
+    - name: Create external Docker network
+      run: docker network create llm-rag-network || true
+
+    - name: Setup test environment
+      run: |
+        cd src
+        touch Pipfile
+        chmod 666 Pipfile
+        pipenv install pytest pytest-cov chromadb langchain openai google-cloud-aiplatform --dev
+        pipenv lock
+        chmod 666 Pipfile.lock
+        chmod -R 777 .
+
+    - name: Build Docker image
+      run: |
+        cd src
+        docker build -t test-image .
+        docker image ls
+
+    - name: Run docker compose
+      run: |
+        cd src
+        docker-compose up -d
+        docker ps
+        sleep 15
+
+    - name: Run tests with proper permissions
       run: |
         cd src
         CONTAINER_NAME=$(docker-compose ps -q test-image)
         echo "Container ID: $CONTAINER_NAME"
         
-        # Ensure proper permissions
         docker exec $CONTAINER_NAME bash -c "mkdir -p /coverage && chmod -R 777 /coverage"
         
-        # Run tests with explicit coverage paths
         docker exec \
           -e COVERAGE_FILE=/coverage/.coverage \
           $CONTAINER_NAME \
@@ -29,15 +89,12 @@
         echo "Listing coverage directory contents:"
         docker exec $CONTAINER_NAME bash -c "ls -la /coverage"
         
-        # Create local coverage directory
         mkdir -p ${{ github.workspace }}/coverage
         
-        # Copy coverage files with verbose output
         echo "Copying coverage files..."
         docker cp $CONTAINER_NAME:/coverage/coverage.xml ${{ github.workspace }}/coverage/ || echo "Failed to copy coverage.xml"
         docker cp $CONTAINER_NAME:/coverage/htmlcov ${{ github.workspace }}/coverage/html || echo "Failed to copy html coverage"
         
-        # Set permissions
         sudo chown -R $USER:$USER ${{ github.workspace }}/coverage
         
         echo "Local coverage directory contents:"
@@ -58,3 +115,10 @@
         name: coverage-report-html
         path: coverage/html
         if-no-files-found: error
+
+    - name: Cleanup
+      if: always()
+      run: |
+        cd src
+        docker-compose down
+        docker network rm llm-rag-network || true
