--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,77 +1,136 @@
-- name: Run tests with proper permissions
-      run: |
-        cd src
-        CONTAINER_NAME=$(docker-compose ps -q test-image)
-        echo "Container ID: $CONTAINER_NAME"
-        
-        # Ensure proper permissions and create coverage directory
-        docker exec $CONTAINER_NAME bash -c "mkdir -p /coverage && chmod -R 777 /coverage"
-        
-        # Run tests with modified coverage paths
-        docker exec \
-          -e COVERAGE_FILE=/coverage/.coverage \
-          $CONTAINER_NAME \
-          bash -c "cd /app && PYTHONPATH=/app pipenv run pytest \
-          --cov=src \
-          --cov-report=term-missing \
-          --cov-report=xml:/coverage/coverage.xml \
-          --cov-report=html:/coverage/htmlcov \
-          tests/ -v"
-        
-        # Debug: List coverage directory contents
-        echo "Coverage directory contents in container:"
-        docker exec $CONTAINER_NAME ls -la /coverage
+name: Run Tests
+on: 
+  push:
+    branches: [ milestone4 ]
 
-    - name: Copy coverage reports
-      if: always()
-      run: |
-        cd src
-        CONTAINER_NAME=$(docker-compose ps -q test-image)
-        
-        # Create local coverage directory
-        mkdir -p ${{ github.workspace }}/coverage
-        chmod -R 777 ${{ github.workspace }}/coverage
-        
-        # Debug: Show container coverage contents
-        echo "Container coverage directory contents:"
-        docker exec $CONTAINER_NAME ls -la /coverage
-        
-        # Copy coverage files
-        echo "Copying coverage files..."
-        docker cp $CONTAINER_NAME:/coverage/. ${{ github.workspace }}/coverage/
-        
-        # Debug: Show local coverage contents
-        echo "Local coverage directory contents:"
-        ls -la ${{ github.workspace }}/coverage
-        
-        # Set permissions
-        sudo chown -R $(id -u):$(id -g) ${{ github.workspace }}/coverage
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
 
-    - name: Upload Coverage Report (XML)
-      if: always()
-      continue-on-error: true
-      uses: actions/upload-artifact@v3
-      with:
-        name: coverage-report-xml
-        path: ${{ github.workspace }}/coverage/coverage.xml
-        if-no-files-found: warn
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.11'
 
-    - name: Upload Coverage Report (HTML)
-      if: always()
-      continue-on-error: true
-      uses: actions/upload-artifact@v3
-      with:
-        name: coverage-report-html
-        path: ${{ github.workspace }}/coverage/htmlcov
-        if-no-files-found: warn
+      - name: Install Pipenv
+        run: |
+          python -m pip install --upgrade pip
+          pip install pipenv
 
-    # Add a step to check if tests generated coverage files
-    - name: Verify Coverage Files
-      if: always()
-      run: |
-        echo "Current directory:"
-        pwd
-        echo "Coverage directory contents:"
-        ls -la ${{ github.workspace }}/coverage || echo "Coverage directory not found"
-        echo "Full directory structure:"
-        find ${{ github.workspace }} -name "coverage.xml" -o -name "htmlcov"
+      - name: Create coverage directory
+        run: |
+          mkdir -p ${{ github.workspace }}/coverage
+          chmod -R 777 ${{ github.workspace }}/coverage
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.5.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+
+      - name: Create external Docker network
+        run: docker network create llm-rag-network || true
+
+      - name: Setup test environment
+        run: |
+          cd src
+          touch Pipfile
+          chmod 666 Pipfile
+          pipenv install pytest pytest-cov chromadb langchain openai google-cloud-aiplatform --dev
+          pipenv lock
+          chmod 666 Pipfile.lock
+          chmod -R 777 .
+
+      - name: Build Docker image
+        run: |
+          cd src
+          docker build -t test-image .
+          docker image ls
+
+      - name: Run docker compose
+        run: |
+          cd src
+          docker-compose up -d
+          docker ps
+          sleep 15
+
+      - name: Run tests with proper permissions
+        run: |
+          cd src
+          CONTAINER_NAME=$(docker-compose ps -q test-image)
+          echo "Container ID: $CONTAINER_NAME"
+          
+          docker exec $CONTAINER_NAME bash -c "mkdir -p /coverage && chmod -R 777 /coverage"
+          
+          docker exec \
+            -e COVERAGE_FILE=/coverage/.coverage \
+            $CONTAINER_NAME \
+            bash -c "cd /app && PYTHONPATH=/app pipenv run pytest \
+            --cov=src \
+            --cov-report=term-missing \
+            --cov-report=xml:/coverage/coverage.xml \
+            --cov-report=html:/coverage/htmlcov \
+            tests/ -v"
+          
+          echo "Coverage directory contents in container:"
+          docker exec $CONTAINER_NAME ls -la /coverage
+
+      - name: Copy coverage reports
+        if: always()
+        run: |
+          cd src
+          CONTAINER_NAME=$(docker-compose ps -q test-image)
+          
+          mkdir -p ${{ github.workspace }}/coverage
+          chmod -R 777 ${{ github.workspace }}/coverage
+          
+          echo "Container coverage directory contents:"
+          docker exec $CONTAINER_NAME ls -la /coverage
+          
+          echo "Copying coverage files..."
+          docker cp $CONTAINER_NAME:/coverage/. ${{ github.workspace }}/coverage/
+          
+          echo "Local coverage directory contents:"
+          ls -la ${{ github.workspace }}/coverage
+          
+          sudo chown -R $(id -u):$(id -g) ${{ github.workspace }}/coverage
+
+      - name: Upload Coverage Report (XML)
+        if: always()
+        continue-on-error: true
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report-xml
+          path: ${{ github.workspace }}/coverage/coverage.xml
+          if-no-files-found: warn
+
+      - name: Upload Coverage Report (HTML)
+        if: always()
+        continue-on-error: true
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report-html
+          path: ${{ github.workspace }}/coverage/htmlcov
+          if-no-files-found: warn
+
+      - name: Verify Coverage Files
+        if: always()
+        run: |
+          echo "Current directory:"
+          pwd
+          echo "Coverage directory contents:"
+          ls -la ${{ github.workspace }}/coverage || echo "Coverage directory not found"
+          echo "Full directory structure:"
+          find ${{ github.workspace }} -name "coverage.xml" -o -name "htmlcov"
+
+      - name: Cleanup
+        if: always()
+        run: |
+          cd src
+          docker-compose down
+          docker network rm llm-rag-network || true
