--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           cd src
           mkdir -p .coverage-reports/htmlcov .pytest_cache
-          sudo chown -R root:root .coverage-reports .pytest_cache
+          sudo chown -R 1000:1000 .coverage-reports .pytest_cache
           sudo chmod -R 777 .coverage-reports .pytest_cache
           
           touch Pipfile
@@ -93,22 +93,7 @@ jobs:
           
           chmod +x run_tests.sh
           docker cp run_tests.sh $CONTAINER_NAME:/app/
-          docker exec --user root $CONTAINER_NAME bash -c "/app/run_tests.sh"
-          
-          # Verify files on host
-          echo "Coverage files on host:"
-          ls -la .coverage-reports/
-          ls -la .coverage-reports/htmlcov/
-
-      - name: Debug Coverage Files
-        run: |
-          cd src
-          echo "Current directory contents:"
-          ls -la
-          echo "Coverage directory contents:"
-          ls -la .coverage-reports/ || echo "Coverage directory not found"
-          echo "HTML coverage directory contents:"
-          ls -la .coverage-reports/htmlcov/ || echo "HTML coverage directory not found"
+          docker exec $CONTAINER_NAME bash -c "pip install pytest pytest-cov && /app/run_tests.sh"
 
       - name: Upload Coverage Report (XML)
         if: always()
@@ -118,7 +103,7 @@ jobs:
           path: |
             src/.coverage-reports/coverage.xml
             src/.coverage-reports/.coverage
-          if-no-files-found: error
+          if-no-files-found: warn
 
       - name: Upload Coverage Report (HTML)
         if: always()
@@ -126,7 +111,7 @@ jobs:
         with:
           name: coverage-report-html
           path: src/.coverage-reports/htmlcov
-          if-no-files-found: error
+          if-no-files-found: warn
 
       - name: Cleanup
         if: always()
