--- a/src/Pipfile
+++ b/src/Pipfile
@@ -28,9 +28,48 @@ agent_tools = "*"
 gcsfs = "*"
 langchain-community = "*"
 importlib-metadata = ">=5.0"
+scipy = "==1.13.1"
+setuptools = "==75.2.0"
+shapely = "==2.0.6"
+six = "==1.16.0"
+sniffio = "==1.3.1"
+SQLAlchemy = "==2.0.35"
+starlette = "==0.41.2"
+sympy = "==1.13.3"
+tenacity = "==8.5.0"
+threadpoolctl = "==3.5.0"
+tiktoken = "==0.8.0"
+tomli = "==2.1.0"
+tqdm = "==4.67.0"
+typer = "==0.13.0"
+typing-extensions = "==4.12.2"
+uritemplate = "==4.1.1"
+urllib3 = "==2.2.3"
+uvicorn = "==0.32.0"
+uvloop = "==0.21.0"
+websocket-client = "==1.8.0"
+websockets = "==14.1"
+wheel = "==0.44.0"
+wrapt = "==1.16.0"
+yarl = "==1.17.1"
+oauthlib = "==3.2.2"
+onnxruntime = "==1.16.3"
+openai = "==1.54.4"
+orjson = "==3.10.11"
+overrides = "==7.7.0"
+packaging = "==24.2"
+pathspec = "==0.12.1"
+pillow = "==11.0.0"
+propcache = "==0.2.0"
+proto-plus = "==1.25.0"
+protobuf = "==5.28.3"
+python-dateutil = "==2.9.0.post0"
+python-dotenv = "==1.0.1"
+pytz = "==2024.2"
+PyYAML = "==6.0.2"
+regex = "==2024.11.6"
+rich = "==13.9.4"
+rsa = "==4.9"
 
 [requires]
 python_version = "3.11"
-
-[scripts]
-test = "pytest"
